<package>
  <name>fetch_description</name>
  <version>0.7.13</version>
  <description>
    URDF for Fetch Robot.
  </description>

  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="amoriarty@fetchrobotics.com">Alex Moriarty</maintainer>

  <license>CreativeCommons-Attribution-NonCommercial-NoDerivatives-4.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
