<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>fetch_ikfast_plugin</name>
  <version>0.7.14</version>
  <description>
    Kinematics plugin for Fetch robot, generated through IKFast
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="amoriarty@fetchrobotics.com">Alex Moriarty</maintainer>

  <license>Apache2</license>
  <url>http://ros.org/wiki/fetch_ikfast_plugin</url>
  <url type="website">http://docs.fetchrobotics.com/manipulation.html</url>
  <url type="bugtracker">https://github.com/fetchrobotics/fetch_ros/issues</url>
  <url type="repository">https://github.com/fetchrobotics/fetch_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/fetch_arm_moveit_ikfast_plugin_description.xml"/>
  </export>

</package>
