<?xml version="1.0"?>
<package>
  <name>fetch_maps</name>
  <version>0.7.13</version>
  <description>The fetch_maps package</description>

  <author>Michael Ferguson</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="amoriarty@fetchrobotics.com">Alex Moriarty</maintainer>

  <author>Michael Gregg</author>
  <author>Michael Ferguson</author>
  <author>Aaron Blasdel</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
