<?xml version="1.0"?>
<package format="2">
  <name>fetch_navigation</name>
  <version>0.8.3</version>
  <description>Configuration and launch files for running ROS navigation on Fetch.</description>

  <author>Michael Ferguson</author>
  <maintainer email="narora@fetchrobotics.com">Niharika Arora</maintainer>
  <maintainer email="csaldanha@fetchrobotics.com">Carl Saldanha</maintainer>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="selliott@fetchrobotics.com">Sarah Elliott</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>BSD</license>
  <url type="wiki">http://ros.org/wiki/fetch_navigation</url>
  <url type="website">http://docs.fetchrobotics.com/navigation.html</url>
  <url type="bugtracker">https://github.com/fetchrobotics/fetch_ros/issues</url>
  <url type="repository">https://github.com/fetchrobotics/fetch_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>fetch_depth_layer</exec_depend>
  <exec_depend>fetch_maps</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>voxel_grid</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
