<?xml version="1.0"?>
<package>
  <name>fetch_ros</name>
  <version>0.7.4</version>
  <description>
   <p>Metapackage that contains ROS packages for fetch robot</p>
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fetch_description</run_depend>
  <run_depend>fetch_moveit_config</run_depend>
  <run_depend>fetch_navigation</run_depend>
  <run_depend>fetch_calibration</run_depend>
  <run_depend>fetch_teleop</run_depend>
  <run_depend>fetch_depth_layer</run_depend>
  <run_depend>fetch_maps</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
