<?xml version="1.0"?>
<package format="2">
  <name>fetch_teleop</name>
  <version>0.8.3</version>
  <description>
    Teleoperation for fetch and freight.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="csaldanha@fetchrobotics.com">Carl Saldanha</maintainer>
  <maintainer email="narora@fetchrobotics.com">Niharika Arora</maintainer>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="selliott@fetchrobotics.com">Sarah Elliott</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>BSD</license>
  <url type="wiki">http://ros.org/wiki/fetch_teleop</url>
  <url type="website">http://docs.fetchrobotics.com/teleop.html</url>
  <url type="bugtracker">https://github.com/fetchrobotics/fetch_ros/issues</url>
  <url type="repository">https://github.com/fetchrobotics/fetch_ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>

</package>
